# website-builder

./: .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  Regression_Data.csv  app-start.sh  blacklist.txt  docker-compose.yaml  log-rotate.conf  pyproject.toml
.github/workflows/: celery-deployment.yml  check-and-rollback.yml  lint-test-deploy-dev.yaml  lint-test-deploy-staging.yaml  lint-test-deploy.yaml
app/: main.py
app/api/: dependencies.py
app/api/endpoints/: __init__.py  health_check.py
app/celery/: config.py  utils.py
app/celery/schemas/: pbn.py
app/celery/tasks/: backlinks.py
app/core/: __init__.py  init_sentry.py  swagger.py
app/core/config/: ai.py  api.py  base.py  build.py  celery.py  cloudflare.py  config.py  database.py  domain.py  integrations.py  message_queue.py  microservices.py  next.py  provider_manager.py  proxy.py  redis.py  scraper.py  storage.py
app/core/exc/: __init__.py  auth.py  author.py  base.py  builder.py  cloudflare.py  cluster.py  domain.py  ovh.py  payment.py  pbn.py  server_provider.py
app/db/: database.py  redis.py
app/enums/: __init__.py  author.py  base.py  cluster.py  desktop.py  domain.py  generation.py  gsc.py  integration.py  microservices.py  otp.py  page.py  pbn.py  project.py  provider.py  selenium.py  soax.py  template.py  transaction.py  user.py  voucher.py  websocket.py
app/enums/elements/: __init__.py  base.py
app/enums/open_ai/: __init__.py  banwords.py  commercial_prompts.py  formatting.py  humanization.py  image.py  intent.py  open_ai.py  pbn.py  structure.py  use_types.py
app/enums/provider/: __init__.py  base.py  hetzner.py  scaleway.py
app/models/: __init__.py  association.py  author.py  backlink.py  base.py  category.py  cluster.py  domain.py  industry.py  integration.py  money_site.py  notification.py  page.py  pbn.py  post.py  project.py  release.py  server_provider.py  service_account.py  social_network.py  transaction.py  user_info.py
app/repository/: __init__.py  author.py  backlink.py  base.py  category.py  cluster.py  domain.py  industry.py  integration.py  money_site.py  page.py  pbn.py  post.py  project.py  server_provider.py  service_account.py  transaction.py  user.py
app/schemas/: __init__.py  author.py  backlink.py  cloudflare.py  fingerprint.py  industry.py  mixins.py  pbn.py  post.py  service_account.py  token.py  tweet.py  user_info.py  xmindmap.py
app/schemas/cluster/: __init__.py  base.py  generation.py
app/schemas/domains/: __init__.py  response.py
app/schemas/elements/: __init__.py
app/schemas/integrations/: __init__.py  base.py  wordpress.py
app/schemas/page/: __init__.py  base.py  cluster_page.py  pbn_page.py
app/schemas/server_provider/: __init__.py  base.py  hetzner.py  scaleway.py
app/schemas/social_networks/: __init__.py  base.py  website.py  x.py
app/schemas/transactions/: __init__.py  refund.py  request.py  spend.py
app/schemas/utils/: search.py  (+3 more)
app/services/: __init__.py  calculation.py  cloudflare.py  pbn.py  proxy.py  rag.py  scraper.py  tavily_service.py  transaction.py  user_info.py
app/utils/: __init__.py  banwords.py  concurrency.py  convertors.py  decorators.py  geolocation.py  message_queue.py  paginator.py  password_encryptor.py  qa.py  scraper.py  similarity_evaluation.py  text_processing.py  unitofwork.py  use_types.py
command/: __init__.py  __main__.py
command/deploy/: __init__.py  done.py  ready.py  status.py  utils.py
dockerfiles/: celery_worker.Dockerfile  celery_worker.dockerignore
(+91 files in other folders)
