[project]
name = "topirank-ai-builder"
version = "0.0.1"
description = "Topirank AI Builder"
authors = []
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "SQLAlchemy (>=2.0.35,<3.0.0)",
    "aiobotocore (==2.16.1)",
    "aiofiles (>=24.1.0,<25.0.0)",
    "anyio (>=4.8.0,<5.0.0)",
    "asgiref (>=3.8.1,<4.0.0)",
    "asyncpg (>=0.29.0,<0.30.0)",
    "bcrypt (>=4.2.0,<5.0.0)",
    "beautifulsoup4 (==4.12.3)",
    "blinker (==1.7.0)",
    "celery (>=5.4.0,<6.0.0)",
    "cryptography (>=43.0.1,<44.0.0)",
    "emoji (>=2.14.1,<3.0.0)",
    "faker (>=30.3.0,<31.0.0)",
    "fastapi (>=0.115.2,<0.116.0)",
    "geopy (==2.4.1)",
    "google-ads (>=25.0.0,<26.0.0)",
    "google-api-python-client (>=2.149.0,<3.0.0)",
    "google-auth (>=2.35.0,<3.0.0)",
    "google-auth-httplib2 (>=0.2.0,<1.0.0)",
    "google-auth-oauthlib (>=1.2.1,<2.0.0)",
    "imageio (>=2.37.0,<3.0.0)",
    "imap-tools (>=1.7.4,<2.0.0)",
    "instructor (>=1.7.0,<2.0.0)",
    "langchain (>=0.3.3,<0.4.0)",
    "langchain-community (>=0.3.2,<0.4.0)",
    "langchain-openai (>=0.2.2,<0.3.0)",
    "loguru (>=0.7.2,<0.8.0)",
    "mdx-include (>=1.3.0,<2.0.0)",
    "nest-asyncio (>=1.6.0,<2.0.0)",
    "openai (>=1.51.2,<2.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "paramiko (>=3.5.1,<4.0.0)",
    "piexif (==1.1.3)",
    "pillow (>=10.4.0,<11.0.0)",
    "prometheus-client (>=0.21.1,<0.30.0)",
    "prometheus-fastapi-instrumentator (>=7.0.0,<8.0.0)",
    "pydantic-settings (>=2.5.2,<3.0.0)",
    "pydantic[email] (>=2.9.2,<3.0.0)",
    "pyee (==11.1.0)",
    "pyjwt (>=2.9.0,<3.0.0)",
    "python-multipart (>=0.0.20,<0.1.0)",
    "python-socketio (>=5.11.4,<6.0.0)",
    "redis (>=5.1.1,<6.0.0)",
    "scikit-learn (>=1.5.2,<2.0.0)",
    "selenium (>=4.26.1,<5.0.0)",
    "selenium-wire (>=5.1.0,<6.0.0)",
    "sentry-sdk (>=2.16.0,<3.0.0)",
    "setuptools (==75.8.0)",
    "treelib (>=1.7.0,<2.0.0)",
    "tweepy (>=4.15.0,<5.0.0)",
    "unidecode (>=1.3.8,<2.0.0)",
    "webdriver-manager (>=4.0.2,<5.0.0)",
    "xmindparser (>=1.0.9,<2.0.0)",
    "tavily-python (>=0.7.3,<0.8.0)",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.prod.dependencies]
typer= "^0.15.1"
uvicorn = "^0.31.1"

[tool.poetry.group.dev.dependencies]
factory-boy = "^3.3.1"
mypy = "^1.11.2"
mypy-extensions = "^1.0.0"
pre-commit = "^4.0.1"
pytest = "^8.3.3"
pytest-asyncio = "^0.24"
pytest-cov = "^5.0.0"
pytest-factoryboy = "^2.7.0"
pytest-mock = "^3.14.0"
pytest-tornasync = "^0.6.0.post2"
ruff = "^0.11.8"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
exclude = "(venv|app/tests)/"
plugins = ["pydantic.mypy"]
strict_optional = true
check_untyped_defs = true
warn_redundant_casts = true
disable_error_code = ["str-format", "import-untyped", "assignment"]
disallow_untyped_calls = true
disallow_untyped_defs = true
warn_incomplete_stub = true
ignore_missing_imports = true
no_implicit_optional = true
warn_no_return = false

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py311"
exclude = ["venv"]

[tool.ruff.lint]
extend-select = ["E", "F", "W", "I", "RUF001", "RUF002", "RUF003"]
ignore = ["E203", "E711", "E712"]
exclude = ["app/enums/open_ai/*", "app/tests/*"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"app/enums/open_ai/*" = ["W291", "W293", "E501"]

[tool.ruff.format]